# rumpsteak

./: Cargo.toml
generate/: Cargo.toml
generate/templates/: protocol.rs
macros/: Cargo.toml
macros/src/: lib.rs  nuscr.rs
macros/tests/: nuscr_to_rs.rs
src/: build.rs  lib.rs
