[package]
name = "rumpsteak"
version = "0.1.0"
authors = ["Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "Session types for asynchronous communication between multiple parties."
readme = "README.md"
repository = "https://github.com/zakcutner/rumpsteak"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]

[lib]
bench = false

[[bench]]
name = "double_buffering"
harness = false

[[bench]]
name = "ring"
harness = false

[[bench]]
name = "subtype"
harness = false
required-features = ["serialize"]

[[bench]]
name = "three_adder"
harness = false

[dependencies]
compile-time-run = "0.2.12"
futures = "0.3"
rumpsteak-fsm = { path = "fsm", version = "0.1", optional = true }
rumpsteak-macros = { path = "macros", version = "0.1" }
tempfile = "3.2"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
futures = { version = "0.3", features = ["thread-pool"] }
num-complex = "0.4"
rand = { version = "0.8" }
rumpsteak-fsm = { path = "fsm", features = ["subtyping"] }
rumpsteak-oneshot = { path = "oneshot" }
tokio = { version = "1.6", features = ["macros", "rt", "time"] }


[features]
serialize = ["rumpsteak-fsm", "rumpsteak-macros/serialize"]

[profile.release]
debug = true

[profile.bench]
debug = true

[workspace]
members = ["caching", "fsm", "generate", "macros", "oneshot"]
